--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>Drag the papers to move!</p>
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./mobile.js"></script>
 <mobile src="./mobile.js"></mobile>
 </body>
 </html>
